# systrack

./: .editorconfig  .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
assets/: github-social-card.xcf  logo.xcf
src/systrack/: __main__.py  arch.py  elf.py  kconfig.py  kconfig_options.py  kernel.py  location.py  log.py  output.py  signature.py  syscall.py  type_hints.py  utils.py  version.py
src/systrack/arch/: __init__.py  all.py  arch_base.py  arm.py  arm64.py  mips.py  powerpc.py  riscv.py  s390.py  x86.py
src/systrack/templates/: syscall_table.css  syscall_table.html  syscall_table.js
test/: test_powerpc.py  utils.py
tests/: test_arch_sanity.py  test_mips.py  test_powerpc.py  test_x86.py  utils.py
tests/data/: .gitattributes  .gitignore  Makefile  x86_no_table_syscall_handlers.s
